--- a/src/style/comment.css
+++ b/src/style/comment.css
@@ -1,6 +1,5 @@
-/* From Uiverse.io by zanina-yassine */
 .card {
-  width: 450px;
+  width: 100%;
   height: fit-content;
   background-color: white;
   box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01),
@@ -180,6 +179,8 @@
   height: fit-content;
   background-color: #f1f1f1;
   padding: 8px;
+  border-bottom-left-radius:7px;
+  border-bottom-right-radius:7px
 }
 
 .text-box .box-container {
