--- a/src/style/comment.css
+++ b/src/style/comment.css
@@ -112,7 +112,7 @@
 .comment-container {
   display: flex;
   flex-direction: column;
-  gap: 15px;
+  gap: 5px;
   padding: 0;
   margin: 0;
 }
@@ -174,6 +174,10 @@
   color: #5f6064;
 }
 
+.comment-content {
+  /* Các thuộc tính hiện tại của comment-content */
+  margin: 5px; /* Bỏ khoảng cách mặc định */
+}
 .text-box {
   width: 100%;
   height: fit-content;
@@ -376,6 +380,7 @@
 }
 
 .reply-button {
+  margin-left: 100px; /* Đẩy nút sang bên phải */
   width: 90px; 
   padding: 10px 15px; 
   font-size: 14px; 
@@ -384,6 +389,7 @@
   border-radius: 5px;
   transition: text-decoration 0.3s;
 }
+
 
 .reply-button:hover {
   text-decoration: underline; 
