--- a/src/style/comment.css
+++ b/src/style/comment.css
@@ -249,6 +249,7 @@
 .radio {
   display: flex;
   gap: 10px;
+  flex-direction: row-reverse; 
 }
 
 .radio > input {
@@ -355,67 +356,4 @@
   100% {
     filter: drop-shadow(0 0 20px rgba(255, 158, 11, 1));
   }
-}
-
-.radio > input:checked + label:hover,
-.radio > input:checked + label:hover ~ label {
-  fill: #e58e09;
-}
-
-.radio > label:hover,
-.radio > label:hover ~ label {
-  fill: #ff9e0b;
-}
-
-.radio input:checked ~ label svg {
-  fill: #ffa723;
-}
-
-.radio input {
-  display: none; 
-}
-
-.reply-button {
-  width: 90px; 
-  padding: 10px 15px; 
-  font-size: 14px; 
-  color: rgb(14, 13, 13); 
-  border: none; 
-  border-radius: 5px;
-  transition: text-decoration 0.3s;
-}
-
-.reply-button:hover {
-  text-decoration: underline; 
-}
-
-.radio label {
-  cursor: pointer;
-  margin-left: 5px;
-}
-
-.reply-box {
-  width: 100%; 
-  display: flex; 
-  align-items: center; 
-  max-width: 1750px; 
-}
- 
-.reply-box textarea {
-  width: 100%; 
-  height: 100px; 
-  border: 1px solid #ccc; 
-  border-radius: 5px; 
-  padding: 10px; 
-  resize: none; 
-}
-
-.reply-box .send-reply {
-  margin-left: 10px; 
-  padding: 15px 20px; 
-  color: #1717ec;
-  font-size: 25px; 
-  border: none;
-  border-radius: 5px; 
-  cursor: pointer; 
 }
