--- a/src/style/sliderBanner.css
+++ b/src/style/sliderBanner.css
@@ -1,7 +1,7 @@
 .slider img {
     height: 700px;
     max-width: 97%; /* Giới hạn chiều ngang */
-    margin: 0 auto; /* Căn giữa hình ảnh nếu cần */
+    margin: 0 auto; 
     margin-bottom: 100px;
 }
 
