--- a/src/style/UserNeedsForm.css
+++ b/src/style/UserNeedsForm.css
@@ -1,69 +1,97 @@
-form {
-  max-width: 600px;
-  margin: 0 auto;
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 20px;
-  background-color: #f9f9f9;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.center-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  margin-top: 20px;
 }
 
-h3 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
+.heading {
+  font-size: 28px;
   color: #333;
+  margin-bottom: 20px;
 }
 
-label {
-  font-size: 1rem;
+.button {
+  background-color: #00bfa5;
+  border: none;
+  border-radius: 25px;
+  padding: 10px 30px;
+  color: white;
+  cursor: pointer;
+  font-size: 16px;
+  margin-bottom: 20px;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #009688;
+}
+
+.grid-item {
+  text-align: center;
+  padding: 16px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
+}
+
+.grid-item:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.grid-item.selected {
+  background-color: #f0f0f0;
+}
+
+.grid-item i {
+  font-size: 30px;
+  color: #00bfa5;
+}
+
+.grid-item p {
+  margin-top: 10px;
+  font-size: 16px;
   color: #555;
 }
 
-input[type="checkbox"] {
-  margin-right: 10px;
-}
-
-input[type="text"] {
+.text-input {
   width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+  max-width: 700px;
+  margin: 20px 0;
 }
 
-div {
-  margin-bottom: 15px;
-}
-
-p {
-  font-size: 0.9rem;
-}
-
-.Send {
-  width: 100%;
-  padding: 10px 0;
-  background-color: #28a745;
-  color: white;
+.submit-btn {
+  background-color: #00bfa5;
   border: none;
-  border-radius: 4px;
+  border-radius: 25px;
+  padding: 10px 30px;
+  color: white;
   cursor: pointer;
-  font-size: 1rem;
-  font-weight: bold;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
 }
 
-.Send:hover {
-  background-color: #218838;
+.submit-btn:hover {
+  background-color: #009688;
 }
 
-p[style] {
-  margin-top: 10px;
-  font-weight: bold;
-}
-
-p[style][color="red"] {
-  color: #dc3545;
-}
-
-p[style][color="green"] {
-  color: #28a745;
+.spinner-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 400px;
 }
