--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -64,3 +64,10 @@ textarea {
     transform: scale(1.05);
     transition: transform 0.3s ease-in-out;
 }
+.contact-formheading {
+    font-size: 20px;
+    color: black;
+    margin-bottom: 10px;
+    font-weight: bold;
+    display: block;
+}
