--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -4,7 +4,9 @@ body {
   padding: 0;
   background-color: #fff;
 }
-
+.headerr{
+  margin: 0;
+}
 .navbar .logo img {
   height: 200px;
   width: 250px;
