--- a/src/style/listSpace.css
+++ b/src/style/listSpace.css
@@ -50,4 +50,33 @@
   .suggestion-item:hover {
     background-color: #f0f0f0; /* Màu nền khi hover */
   }
+  .custom-filter-section {
+    margin: 10px 0;
+  }
+  
+  .custom-filter-item {
+    margin: 5px 0;
+  }
+  
+
+  .custom-scrollable-filter {
+    max-height: 215px; 
+    overflow-y: auto; 
+    padding: 5px; 
+    scrollbar-width: thin; 
+    scrollbar-color: orange transparent; 
+  }
+  
+  .custom-scrollable-filter::-webkit-scrollbar {
+    width: 8px; 
+  }
+  
+  .custom-scrollable-filter::-webkit-scrollbar-thumb {
+    background-color: orange; 
+    border-radius: 10px; 
+  }
+  
+  .custom-scrollable-filter::-webkit-scrollbar-track {
+    background: transparent;
+  }
   
