--- a/src/style/History.css
+++ b/src/style/History.css
@@ -1,11 +1,10 @@
-
-
 .cardhistory {
     border: none;
     border-radius: 10px;
     margin: 0px 0px 0px;
     width: 100%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
 
 .card-headerhistory {
