--- a/src/style/chat.css
+++ b/src/style/chat.css
@@ -5,7 +5,7 @@
   --gray: rgba(36, 45, 73, 0.65);
   --profileShadow: 0px 4px 17px 2px rgba(0, 0, 0, 0.25);
   --hrColor: #cfcdcd;
-  --cardColor: rgba(255, 255, 255, 0.64);
+  --cardColor: rgba(243, 243, 242, 0.835);
   --buttonBg: linear-gradient(98.63deg, #f9a225 0%, #f95f35 100%);
   --inputColor: rgba(40, 52, 62, 0.07);
   --photo: #4cb256;
@@ -24,6 +24,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  height: 100%;
 }
 
 .Chat-container {
@@ -34,7 +35,7 @@
   border-radius: 1rem;
   padding: 1rem;
   height: auto;
-  min-height: 80vh;
+  height: 100%;
   overflow: scroll;
 }
 
